; ModuleID = '/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_rpc.c_rpc_send_forwardSocketSetup.c'
source_filename = "/home/carl/AnghaBench/ios-webkit-debug-proxy/src/extr_rpc.c_rpc_send_forwardSocketSetup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RPC_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"_rpc_forwardSocketSetup:\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"WIRApplicationIdentifierKey\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"WIRAutomaticallyPause\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"WIRPageIdentifierKey\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"WIRSenderKey\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpc_send_forwardSocketSetup(i32 %0, i8* %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %5
  %18 = load i8*, i8** %9, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i8*, i8** %11, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %25, label %23

23:                                               ; preds = %20, %17, %5
  %24 = load i32, i32* @RPC_ERROR, align 4
  store i32 %24, i32* %6, align 4
  br label %50

25:                                               ; preds = %20
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8** %12, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = call i32 @rpc_new_args(i8* %26)
  store i32 %27, i32* %13, align 4
  %28 = load i32, i32* %13, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = call i32 @plist_new_string(i8* %29)
  %31 = call i32 @plist_dict_set_item(i32 %28, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %30)
  %32 = load i32, i32* %13, align 4
  %33 = call i32 @plist_new_bool(i32 0)
  %34 = call i32 @plist_dict_set_item(i32 %32, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i32 %33)
  %35 = load i32, i32* %13, align 4
  %36 = load i32, i32* %10, align 4
  %37 = call i32 @plist_new_uint(i32 %36)
  %38 = call i32 @plist_dict_set_item(i32 %35, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i32 %37)
  %39 = load i32, i32* %13, align 4
  %40 = load i8*, i8** %11, align 8
  %41 = call i32 @plist_new_string(i8* %40)
  %42 = call i32 @plist_dict_set_item(i32 %39, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), i32 %41)
  %43 = load i32, i32* %7, align 4
  %44 = load i8*, i8** %12, align 8
  %45 = load i32, i32* %13, align 4
  %46 = call i32 @rpc_send_msg(i32 %43, i8* %44, i32 %45)
  store i32 %46, i32* %14, align 4
  %47 = load i32, i32* %13, align 4
  %48 = call i32 @plist_free(i32 %47)
  %49 = load i32, i32* %14, align 4
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %25, %23
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local i32 @rpc_new_args(i8*) #1

declare dso_local i32 @plist_dict_set_item(i32, i8*, i32) #1

declare dso_local i32 @plist_new_string(i8*) #1

declare dso_local i32 @plist_new_bool(i32) #1

declare dso_local i32 @plist_new_uint(i32) #1

declare dso_local i32 @rpc_send_msg(i32, i8*, i32) #1

declare dso_local i32 @plist_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
